16-StackPolicy/16-04-StackPolicy-NotAction-Override/16-04-01-Base-cfn-StackPolicy.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  KeyName:
    Description: Key name to SSH to VM's.
    Type: AWS::EC2::KeyPair::KeyName

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: My SG with port 22, 8080 and 80 inbound
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '8080'
          ToPort: '8080'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '9080'
          ToPort: '9080'
          CidrIp: 0.0.0.0/0

  MyNewSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0


  MyVMInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-04cdd58fedf5c192a
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref MySecurityGroup
        - !Ref MyNewSG
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum update
          sudo yum -y erase java-1.7.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk.x86_64
          sudo yum -y install java-1.8.0-openjdk-devel
          sudo yum -y install tomcat8
          service tomcat8 start
          mkdir /usr/share/tomcat8/webapps/ROOT
          touch /usr/share/tomcat8/webapps/ROOT/index.html
          echo "Cloud Formation Tomcat8" > /usr/share/tomcat8/webapps/ROOT/index.html

Outputs:
  AppURL:
    Description: Application URL to access
    Value: !Sub 'http://${MyVMInstance.PublicDnsName}:8080/index.html'
